--- a/index.html
+++ b/index.html
@@ -98,37 +98,42 @@
 			<article class="article article--space">
 				<div class="wrapper__grid">
 
-				<ul class="list page__services-list">
-					<li class="service list__element">
-						<div class="service__name">
-							<span>Online Shopping</span>
-						</div>
-						<div class="service__icon"><img class="service__img" src="img/icon-cart.png" alt=""></div>
-					</li>
-					<li class="service list__element">
-						<div class="service__name">
-							<span>Quality Product</span>
-						</div>
-						<div class="service__icon"><img class="service__img" src="img/icon-quality.png" alt=""></div>
-					</li>
-					<li class="service list__element">
-						<div class="service__name">
-							<span>Domestic &amp; International Delivery</span>
-						</div>
-						<div class="service__icon"><img class="service__img" src="img/icon-international.png" alt="">
-						</div>
-					</li>
-					<li class="service list__element">
-						<div class="service__name">
-							<span>Well Organized</span>
-						</div>
-						<div class="service__icon"><img class="service__img" src="img/icon-carrot.png" alt=""></div>
-					</li>
-				</ul>
+					<ul class="list page__services-list">
+						<li class="service list__element">
+							<div class="service__name">
+								<span>Online Shopping</span>
+							</div>
+							<div class="service__icon"><img class="service__img" src="img/icon-cart.png" alt=""></div>
+						</li>
+						<li class="service list__element">
+							<div class="service__name">
+								<span>Quality Product</span>
+							</div>
+							<div class="service__icon"><img class="service__img" src="img/icon-quality.png" alt="">
+							</div>
+						</li>
+						<li class="service list__element">
+							<div class="service__name">
+								<span>Domestic &amp; International Delivery</span>
+							</div>
+							<div class="service__icon"><img class="service__img" src="img/icon-international.png"
+									alt="">
+							</div>
+						</li>
+						<li class="service list__element">
+							<div class="service__name">
+								<span>Well Organized</span>
+							</div>
+							<div class="service__icon"><img class="service__img" src="img/icon-carrot.png" alt=""></div>
+						</li>
+					</ul>
 
-				<div class="page__services-picture article article--group article--right">
-					<h2 class="text text__heading text--right">Our Services</h2>
-				</div>
+					<div class="page__services-picture article article--group article--right">
+						<div class="article__text article__text--center">
+							<h2 class="text__heading ">Our Services</h2>
+						</div>
+
+					</div>
 				</div>
 
 			</article>
