--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/bem.css">
+	<link rel="stylesheet" href="css/lightgallery.css">
 	<link rel="stylesheet" href="css/article.css">
-	<link rel="stylesheet" href="css/text.css">
-	<link rel="stylesheet" href="css/page.css">
-	<link rel="stylesheet" href="css/list.css">
-	<link rel="stylesheet" href="css/theme.css">
-	<link rel="stylesheet" href="css/column.css">
-	<link rel="stylesheet" href="css/wrapper.css">
-	<link rel="stylesheet" href="css/button.css">
-	<link rel="stylesheet" href="css/footer.css">
 	<link rel="stylesheet" href="css/bar.css">
-	<link type="text/css" rel="stylesheet" href="css/lightgallery.css" />
+	<link rel="stylesheet" href="css/blog.css">
+	<link rel="stylesheet" href="css/button.css">
+	<link rel="stylesheet" href="css/contact.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/gallery.css">
+	<link rel="stylesheet" href="css/image.css">
+	<link rel="stylesheet" href="css/list.css">
+	<link rel="stylesheet" href="css/logo.css">
+	<link rel="stylesheet" href="css/nav.css">
+	<link rel="stylesheet" href="css/page.css">
+	<link rel="stylesheet" href="css/service.css">
+	<link rel="stylesheet" href="css/subscribe.css">
+	<link rel="stylesheet" href="css/text.css">
+	<link rel="stylesheet" href="css/theme.css">
+	<link rel="stylesheet" href="css/wrapper.css">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </head>
@@ -184,7 +190,7 @@
 					</p>
 				</div>
 
-				<form class="article__item subscribe__form bar bar--start" action="">
+				<form class="article__item subscribe bar bar--start" action="">
 					<input class="subscribe__text" type="text" name="email" placeholder="Your email address...">
 					<input class="button button--olive" type="button" value="SUBSCRIBE">
 				</form>
